--- a/set_encoder/configs/cli/msmarco-passage-colbert.yaml
+++ b/set_encoder/configs/cli/msmarco-passage-colbert.yaml
@@ -1,20 +1,18 @@
 data:
   train_ir_dataset_paths:
-    - data/__rankgpt4__msmarco-passage-train-judged.run
+    - data/baseline-runs/colbert/msmarco-passage-train-judged.run
   truncate: true
   max_length: 256
-  batch_size: 2
+  batch_size: 16
   val_batch_size: 10
   predict_batch_size: 1
-  train_sample_size: 100
-  train_sample_depth: -1
+  train_sample_size: 8
+  train_sample_depth: 200
   depth: 100
-  num_relevant_samples: -1
+  num_relevant_samples: 1
   min_num_relevant_samples: 0
   shuffle_queries: true
   shuffle_docs: false
-  relevant_sampling_strategy: full_random
+  relevant_sampling_strategy: random
   non_relevant_sampling_strategy: random
-  remove_unjudged_docs: false
-  use_ranks_as_qrels: true
   num_workers: 2
